# music-tagger

./: .gitignore  README.md  music_tagger.py  music_tagger_report.html  pyproject.toml  requirements.txt
music_tagger/: __init__.py  __main__.py  matcher.py  report.py  store.py  tags.py  verify.py
tools/: analyze_sample_results.py  read_sample_summary.py  report_problems.py  sample_acoustid_test.py  test_acoustid.py
